Load Meta accounts from saved access
